--- a/05/04.html
+++ b/05/04.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 	<h2>有序列表</h2>
-	<p><img src="01.jpg" height="500"></p>
+	<p><img src="01.jpg" alt=""></p>
 	<h2>无序列表</h2>
-	<p><img src="02.jpg" height="500"></p>
+	<p><img src="02.jpg" alt=""></p>
 	<h2>定义列表</h2>
-	<p><img src="03.jpg" height="500"></p>
+	<p><img src="03.jpg" alt=""></p>
 </body>
 </html>
